@@ -16,8 +16,4 @@ keywords: netapp, solutions, hybrid cloud, private cloud, virtualization, vdi, v
 [.lead]
 Overview of the blogs highlighting specific features of the Hybrid Cloud, Desktop Virtualization and Containers solutions.
 
-=== Hybrid / Private Cloud Blogs
-
-=== Desktop Virtualization Blogs
-
-=== Containers Blogs
+* link:https://blog.netapp.com/accelerate-your-k8s-journey[Using VMware Tanzu with ONTAP to accelerate your Kubernetes journey]
