@@ -42,9 +42,9 @@ homepage:
         - title: "Videos and Demos"
           summary: Short videos / demos for Hybrid Cloud, Virtualization and Containers features
           url: hc-videos.html
-#        - title: "Blogs"
-#          summary: Technical blogs highlighting Hybrid Cloud, Virtualization and Containers features
-#          url: hc-blogs.html
+        - title: "Blogs"
+          summary: Technical blogs highlighting Hybrid Cloud, Virtualization and Containers features
+          url: hc-blogs.html
 #
     - title: Business Applications & Enterprise Databases
       links:
