@@ -19,6 +19,7 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 04/26/2021 | Hybrid Cloud Blogs | Added blog: Using VMware Tanzu with ONTAP to accelerate your Kubernetes journey
 | 04/06/2021 | NetApp Solutions | Added "About this Repository"
 | 03/31/2021 | AI Use Cases | Added TR-4886: AI Inferencing at the Edge: NetApp ONTAP with Lenovo ThinkSystem Solution Design
 | 03/29/2021 | Modern Data Analytics | Added NVA-1157: Apache Spark Workload with NetApp Storage Solution
